fixing the endless horizontal scrolling

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -32,38 +32,48 @@
 //   padding: 0 1.5rem;
 // }
 
-//.sample-item-1 {
+.sample-item-1 {
 
-//   height: 250px;
-//   min-width: 350px;
-//   width: 350px;
-// }
+  height: 250px;
+  min-width: 350px;
+  width: 350px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 
-// .sample-item-2 {
+.sample-item-2 {
 
-//   height: 250px;
-//   min-width: 350px;
-//   width: 350px;
-// }
+  height: 250px;
+  min-width: 350px;
+  width: 350px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 
-// .sample-item-3 {
+.sample-item-3 {
 
-//   height: 250px;
-//   min-width: 350px;
-//   width: 350px;
-// }
-// .sample-item-4 {
+  height: 250px;
+  min-width: 350px;
+  width: 350px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.sample-item-4 {
 
-//   height: 250px;
-//   min-width: 350px;
-//   width: 350px;
-// }
-// .sample-item-5 {
+  height: 250px;
+  min-width: 350px;
+  width: 350px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.sample-item-5 {
 
-//   height: 250px;
-//   min-width: 350px;
-//   width: 350px;
-// }
+  height: 250px;
+  min-width: 350px;
+  width: 350px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 
 // Plugin code below
 
